--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ python:
   - "3.5"
 
 script: 
-  - python3 ./Basic-Part-*/source-code/*.py
+  - python3 ./Basic-Part-1/source-code/*.py
+  - python3 ./Basic-Part-2/source-code/*.py
